# FukoCore

./: .gitignore  CMakeLists.txt  FukoCore.sln  README.md  xmake.lua
Code/Core/: CMakeLists.txt  xmake.lua
Code/Core/Include/: Core.h  CoreConfig.h  CoreType.h
Code/Gfx/: xmake.lua
Code/Gfx/Include/: CmdBuffer.h  CmdQueue.h  DeviceChild.h  Enums.h  Fence.h  GPUAlloc.h  Gfx.h  GfxConfig.h  PSO.h  RenderPass.h  Resources.h  RootSignature.h  SwapChain.h
Code/Gfx/Source/: Gfx.cpp
Code/TestCore/: CMakeLists.txt  xmake.lua
Code/TestCore/Include/: TestArray.h  TestBitArray.h  TestDelegate.h  TestMap.h  TestName.h  TestPool.h  TestRingQueue.h  TestSet.h  TestSparseArray.h  TestString.h
Code/TestCore/Source/: TestMain.cpp
Code/TestGfx/: xmake.lua
Code/TestGfx/Source/: Main.cpp
FukoCore/: FukoCore.vcxproj  FukoCore.vcxproj.filters  TestMain.cpp  xmake.lua
FukoCore/Include/: CoreConfig.h
FukoCore/Include/Algo/: Accumulate.h  AllOf.h  BinarySearch.h  Compare.h  Copy.h  Count.h  Find.h  ForEach.h  IsHeap.h  IsSorted.h  LevenshteinDistance.h  MinMax.h  Partition.h  RemoveIf.h  Replace.h  Reverse.h  Rotate.h  Sort.h  StableSort.h  Transform.h  Unique.h
FukoCore/Include/Containers/: Allocators.h  AllocatorsPmr.h  Array.h  ArrayView.h  BitArray.h  CircularQueue.h  ContainerFwd.h  HashTable.h  Map.h  Set.h  SparseArray.h
FukoCore/Include/CoreMinimal/: Assert.h  Crc.h
FukoCore/Include/Math/: MathUtility.h
FukoCore/Include/Memory/: Allocators.h  Memory.h
TestCore/: TestCore.vcxproj  TestMain.cpp  xmake.lua
TestCore/Source/: TestMain.cpp
(+150 files in other folders)
